NovaTech-Metadata/force-app/main/default/objects/Site__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Region1</fullName>
                <isActive>false</isActive>
                <label>Region1</label>
            </value>
            <value>
                <fullName>Region2</fullName>
                <isActive>false</isActive>
                <label>Region2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>